[package]
name = "fleet-auth"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/casey-digennaro/fleet-auth"
edition = "2021"
description = "Authentication and authorization for fleet services"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hmac = "0.12"
anyhow = "1"
hex = "0.4"
